--- a/frontend/go_chat/web/index.html
+++ b/frontend/go_chat/web/index.html
@@ -27,9 +27,9 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png?v=2"/>
 
-  <title>go_chat</title>
+  <title>Go Chat</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
